<resources>
    <string name="app_name">Krono</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profiles">Profiles</string>
    <string name="sports">Sports</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="chronometer">Chronometer</string>
	<string name="loading">Loading</string>
	<string name="start_tracking">Start Tracking</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="stop_tracking">Stop Tracking</string>
	<string name="restart_tracking">Reset</string>
	<string name="add_profile">Add Profile</string>
	<string name="kilometers">Km</string>
	<string name="meters">m</string>
	<string name="distance">Distance</string>
	<string name="activity">Activity</string>
	<string name="sport">Sport</string>
	<string name="lap">Lap</string>
	<string name="sun">Sun</string>
	<string name="mon">Mon</string>
	<string name="tue">Tue</string>
	<string name="wed">Wed</string>
	<string name="thu">Thu</string>
	<string name="fri">Fri</string>
	<string name="sat">Sat</string>
	<string name="zero_time">00:00:00</string>
</resources>
