<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_chronometer"
                android:icon="@mipmap/ic_action_access_alarm"
                android:title="@string/chronometer"/>
        <item
                android:id="@+id/nav_profiles"
                android:icon="@mipmap/ic_action_people"
                android:title="@string/profiles"/>
        <item
                android:id="@+id/nav_sports"
                android:icon="@mipmap/ic_temple"
                android:title="@string/sports"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="Share"/>-->
            <!--<item-->
                    <!--android:id="@+id/nav_send"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
